updated content but still need titles for  How the Breach Happened and Data Compromised
updated content but still need titles for  How the Breach Happened and Data Compromised

--- a/companies-africa/Libya Telecom & Technology.html
+++ b/companies-africa/Libya Telecom & Technology.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>South African Post Office</title>
+		<title>Libya Telecom & Technology</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -294,9 +294,9 @@
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Africa</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">South African Post Office</a>
+                        <a href="#" class="text-sm">Libya Telecom & Technology</a>
                     </div>
-                    <h4 class="font-semibold text-5xl">South African Post Office</h4>
+                    <h4 class="font-semibold text-5xl">Libya Telecom & Technology</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
                         <a href="#overview">Overview</a>
                         <a href="#method">How it Happened</a>
@@ -312,28 +312,29 @@
             
             <div class="space-y-4" id="overview">
                 <h4 class="text-3xl font-medium text-purple-300">Overview of the Breach</h4>
-                <p>The South African Post Office's banking branch, Postbank, experienced a serious internal security breach in December 2018. Unauthorized access to the bank's master key allowed rogue workers to carry out fraudulent transactions worth more than R56 million. The financial and personal information of almost 12 million beneficiaries was stolen in this breach. In order to stop additional abuse, Postbank was forced to replace all impacted bank cards. The event brought to light serious weaknesses in the internal security procedures of the bank. Concerns over insider risks in financial organizations were also brought up. The bank's operations and customer trust were negatively impacted for a long time by the incident.</p>
+                <p>The state-owned internet service company Libya Telecom & Technology (LTT) was the subject of a serious cyberattack in July 2023. A number of Distributed Denial-of-Service (DDoS) attacks were used in the attack, which caused nationwide internet service disruptions. These attacks were part of a larger campaign targeting Libyan communication firms, according to the Libyan Post Telecommunications & Information Technology Company (LPTIC). With almost 4,400 attacks totaling 114 GB of malicious traffic during the third quarter of the year, the cyberattacks were notable for their scope and tenacity. These events brought to light Libya's cybersecurity infrastructure's weaknesses and the requirement for stronger defenses. Similar threats were reported in other nations, proving that the attacks were not unique and that there is a global pattern of rising cyberthreats against telecom companies. The LPTIC highlighted the persistent character of these dangers and the significance of global collaboration in tackling cybersecurity issues.</p>
             </div>
 
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Detail 1</h1>
-                <p class="pl-4">- Employees with access to Postbank's master key, an essential component of the bank's security system, were responsible for the breach. These insiders carried out illegal transactions by abusing their positions. They were able to function without being discovered right away since there were lax access controls. This suggests that the bank's internal security procedures have serious flaws.
+                <p class="pl-4">- The attackers launched extensive DDoS attacks against LTT, overwhelming the company's servers with excessive traffic.These attacks were designed to disrupt normal operations by saturating the network bandwidth, rendering services inaccessible to legitimate users. The scale of the attacks was unprecedented in Libya, indicating a high level of coordination and resources on the part of the attackers. The persistent nature of the attacks suggested that they were part of a sustained campaign to destabilize the country's telecommunications infrastructure.
                 </p>
                 <h1 class="text=xl font-medium">Detail 2</h1>
-                <p class="pl-4">- The fraudulent operations were not immediately detected by Postbank's monitoring systems. The delay in discovering the breach was caused in part by the lack of capabilities for anomaly detection and real-time monitoring. Furthermore, such internal dangers could not be adequately addressed by the bank's incident response procedures. This emphasizes the necessity of all-encompassing security plans that incorporate insider threat reduction.</p>
+                <p class="pl-4">- The effectiveness of the attacks was exacerbated by Libya's inadequate cybersecurity infrastructure. Many of the systems in place were outdated and lacked the necessary safeguards to detect and mitigate such threats. Furthermore, the absence of a comprehensive national cybersecurity policy meant that there was no coordinated response to the attacks. This lack of preparedness left LTT and other communication companies vulnerable to ongoing and future cyber threats.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Info 1</h5>
-                <p class="pl-4">- About 12 million beneficiaries' names, identification numbers, and contact information were among the private data compromised. Identity theft and other illicit operations can benefit greatly from such data. For those impacted, the disclosure of this information presented serious risks. Concerns over the security of private information in government agencies were also brought up.</p>
+                <p class="pl-4">- The primary impact of the DDoS attacks was the widespread disruption of internet services provided by LTT. Users across Libya experienced intermittent connectivity issues, affecting both personal communications and business operations. The disruptions had a cascading effect on various sectors reliant on internet connectivity, including finance, healthcare, and education. The instability of internet services also hindered access to critical information and emergency services.</p>
 
                 <h5 class="text-xl font-medium"> Info 2</h5>
-                <p class="pl-4">- Transaction histories and bank account information were also compromised, along with personal data. The bank suffered financial losses as a result of the criminals' ability to carry out illegal operations. Customers' faith in Postbank's ability to protect their funds was further damaged by the disclosure of such financial information. Additionally, it emphasized how susceptible financial organizations could be to internal attacks.</p>
+                <p class="pl-4">- Although the primary goal of the DDoS attacks was to disrupt services, there was a chance that system vulnerabilities could expose sensitive operational data, and the absence of strong security measures could allow attackers to gain unauthorized access to internal systems, which could compromise sensitive data, including user data and internal communications. The extent of data exposure is still unknown because of the lack of transparency and reporting mechanisms.</p>
 
-                <h5 class="text-xl font-medium">The impact of the hack on Postbank and its clients was significant. The bank lost more than R56 million as a result of fraudulent transactions. The requirement to replace 12 million bank cards presented logistical and operational difficulties. Customers lost faith in the bank as a result of the occurrence, which hurt its reputation. Consumers had to deal with the worry of possible identity theft as well as the inconvenience of having to replace their cards. The hack has led to calls for the bank to strengthen its security and regulatory inspections. Postbank responded by working to improve its internal security procedures and monitoring systems.
+                <h5 class="text-xl font-medium">The cyberattacks had significant repercussions for both LTT and its customers. For the corporation, the attacks showed major gaps in its cybersecurity architecture, mandating immediate investments in system improvements and security processes. The disruptions also lead to a loss of client trust and potential financial losses owing to service outages. Conversely, customers encountered difficulties in carrying out business operations, communicating clearly, and gaining access to necessary services. A number of industries were impacted by the unreliability of internet connections, which had a wider effect on the national economy. The incidents emphasized the significance of having a comprehensive national cybersecurity plan to protect vital infrastructure. Increased international cooperation has been demanded in response in order to improve Libya's cybersecurity capabilities and resistance to potential threats.
+
                 </p>
             </div>
         </div>
