--- a/companies-africa/City Power.html
+++ b/companies-africa/City Power.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>South African Post Office</title>
+		<title>City Power</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -294,9 +294,9 @@
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Africa</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">South African Post Office</a>
+                        <a href="#" class="text-sm">City Power</a>
                     </div>
-                    <h4 class="font-semibold text-5xl">South African Post Office</h4>
+                    <h4 class="font-semibold text-5xl">City Power</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
                         <a href="#overview">Overview</a>
                         <a href="#method">How it Happened</a>
@@ -312,28 +312,28 @@
             
             <div class="space-y-4" id="overview">
                 <h4 class="text-3xl font-medium text-purple-300">Overview of the Breach</h4>
-                <p>The South African Post Office's banking branch, Postbank, experienced a serious internal security breach in December 2018. Unauthorized access to the bank's master key allowed rogue workers to carry out fraudulent transactions worth more than R56 million. The financial and personal information of almost 12 million beneficiaries was stolen in this breach. In order to stop additional abuse, Postbank was forced to replace all impacted bank cards. The event brought to light serious weaknesses in the internal security procedures of the bank. Concerns over insider risks in financial organizations were also brought up. The bank's operations and customer trust were negatively impacted for a long time by the incident.</p>
+                <p>A ransomware attack was launched against Johannesburg's power provider, City Power, in July 2019. The company's activities were disrupted by the cyberattack, which encrypted its databases, apps, and network systems. Residents suffered from power outages as a result, and consumers were unable to buy electrical units. The hack brought to light how susceptible vital infrastructure is to online attacks. Service delivery was impacted by the serious compromise of City Power's IT infrastructure. The event made clear how important it is for critical services to have strong cybersecurity. Additionally, it increased public awareness of how cyberattacks may affect day-to-day living.</p>
             </div>
 
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Detail 1</h1>
-                <p class="pl-4">- Employees with access to Postbank's master key, an essential component of the bank's security system, were responsible for the breach. These insiders carried out illegal transactions by abusing their positions. They were able to function without being discovered right away since there were lax access controls. This suggests that the bank's internal security procedures have serious flaws.
+                <p class="pl-4">- Phishing emails were probably utilized by the attackers to spread the ransomware payload. The infection may have been brought on by staff members unintentionally clicking on harmful attachments or URLs. This technique highlights the significance of cybersecurity awareness training by taking advantage of human weaknesses. Staff members need to be trained by their organizations to spot and report questionable communications.
                 </p>
                 <h1 class="text=xl font-medium">Detail 2</h1>
-                <p class="pl-4">- The fraudulent operations were not immediately detected by Postbank's monitoring systems. The delay in discovering the breach was caused in part by the lack of capabilities for anomaly detection and real-time monitoring. Furthermore, such internal dangers could not be adequately addressed by the bank's incident response procedures. This emphasizes the necessity of all-encompassing security plans that incorporate insider threat reduction.</p>
+                <p class="pl-4">- The ransomware took advantage of pre-existing flaws in City Power's software. The systems were vulnerable to assault because timely security fixes were not applied. In order to reduce such risks, regular software updates and vulnerability checks are essential. The repercussions of skipping regular cybersecurity maintenance are illustrated by this occurrence.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Info 1</h5>
-                <p class="pl-4">- About 12 million beneficiaries' names, identification numbers, and contact information were among the private data compromised. Identity theft and other illicit operations can benefit greatly from such data. For those impacted, the disclosure of this information presented serious risks. Concerns over the security of private information in government agencies were also brought up.</p>
+                <p class="pl-4">- Access to operational data that is necessary for controlling the distribution of energy was interfered with by the attack. This made it more difficult for City Power to efficiently monitor and manage the power supply. Long-lasting service interruptions and difficulties resuming regular operations may result from the loss of such data. For utility firms, maintaining the availability and integrity of operating data is essential.</p>
 
                 <h5 class="text-xl font-medium"> Info 2</h5>
-                <p class="pl-4">- Transaction histories and bank account information were also compromised, along with personal data. The bank suffered financial losses as a result of the criminals' ability to carry out illegal operations. Customers' faith in Postbank's ability to protect their funds was further damaged by the disclosure of such financial information. Additionally, it emphasized how susceptible financial organizations could be to internal attacks.</p>
+                <p class="pl-4">- The ransomware attack also impacted customer account and billing information. Consumers had trouble accessing their account information and buying electrical units. The possibility of financial theft and privacy issues are brought up by the compromise of this data. Utility companies need to put protections in place to keep consumer data safe from online attacks.</p>
 
-                <h5 class="text-xl font-medium">The impact of the hack on Postbank and its clients was significant. The bank lost more than R56 million as a result of fraudulent transactions. The requirement to replace 12 million bank cards presented logistical and operational difficulties. Customers lost faith in the bank as a result of the occurrence, which hurt its reputation. Consumers had to deal with the worry of possible identity theft as well as the inconvenience of having to replace their cards. The hack has led to calls for the bank to strengthen its security and regulatory inspections. Postbank responded by working to improve its internal security procedures and monitoring systems.
+                <h5 class="text-xl font-medium">The impact of the ransomware attack on City Power and its clients was immediate and noticeable. Both residential and commercial regions experienced power outages as a result of operational interruptions. The inability of customers to buy electricity caused a great deal of discontent. The utility's IT infrastructure was reviewed after the event revealed its cybersecurity flaws. Due to service outages, City Power could lose money and suffer reputational harm. The incident acted as a warning to the utilities industry to give cybersecurity top priority. City Power responded by taking action to fortify its defenses against potential cyberattacks.
                 </p>
             </div>
         </div>
