--- a/companies-africa/Kenya Revenue Authority.html
+++ b/companies-africa/Kenya Revenue Authority.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>South African Post Office</title>
+		<title>Kenya Revenue Authority</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -294,9 +294,9 @@
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Africa</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">South African Post Office</a>
+                        <a href="#" class="text-sm">Kenya Revenue Authority</a>
                     </div>
-                    <h4 class="font-semibold text-5xl">South African Post Office</h4>
+                    <h4 class="font-semibold text-5xl">Kenya Revenue Authority</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
                         <a href="#overview">Overview</a>
                         <a href="#method">How it Happened</a>
@@ -312,28 +312,29 @@
             
             <div class="space-y-4" id="overview">
                 <h4 class="text-3xl font-medium text-purple-300">Overview of the Breach</h4>
-                <p>The South African Post Office's banking branch, Postbank, experienced a serious internal security breach in December 2018. Unauthorized access to the bank's master key allowed rogue workers to carry out fraudulent transactions worth more than R56 million. The financial and personal information of almost 12 million beneficiaries was stolen in this breach. In order to stop additional abuse, Postbank was forced to replace all impacted bank cards. The event brought to light serious weaknesses in the internal security procedures of the bank. Concerns over insider risks in financial organizations were also brought up. The bank's operations and customer trust were negatively impacted for a long time by the incident.</p>
+                <p>The Kenya Revenue Authority's activities were hampered by a major cyberattack in 2021. A ransomware outbreak was used in the attack to encrypt important data, such as financial records, tax returns, and taxpayer information. KRA was forced to briefly halt its services as a result, which had an impact on both its online and offline operations. The hack raised questions over the security of private financial information and revealed weaknesses in KRA's cybersecurity architecture. The event brought attention to the need for improved procedures to protect against future cyber threats and spurred a review of the organization's security protocols. The public's confidence in the government's ability to safeguard financial and personal data was also more broadly affected by the attack. Following the attack, KRA started working to improve its incident response capabilities and fortify its cybersecurity posture.</p>
             </div>
 
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Detail 1</h1>
-                <p class="pl-4">- Employees with access to Postbank's master key, an essential component of the bank's security system, were responsible for the breach. These insiders carried out illegal transactions by abusing their positions. They were able to function without being discovered right away since there were lax access controls. This suggests that the bank's internal security procedures have serious flaws.
+                <p class="pl-4">- The attackers were able to run arbitrary code on KRA's servers by taking advantage of a zero-day vulnerability in the popular Log4j logging package. Because of its broad use in many different applications and ease of exploitation, this vulnerability—known as Log4Shell—was very hazardous. After gaining access, the attackers used ransomware to encrypt important data, making it impossible for KRA employees to access. The exploitation of this weakness made it clear how crucial it is to patch vulnerabilities promptly and how important it is for businesses to keep up with new threats.
                 </p>
                 <h1 class="text=xl font-medium">Detail 2</h1>
-                <p class="pl-4">- The fraudulent operations were not immediately detected by Postbank's monitoring systems. The delay in discovering the breach was caused in part by the lack of capabilities for anomaly detection and real-time monitoring. Furthermore, such internal dangers could not be adequately addressed by the bank's incident response procedures. This emphasizes the necessity of all-encompassing security plans that incorporate insider threat reduction.</p>
+                <p class="pl-4">- The breach was further facilitated by KRA's lack of timely system updates and inadequate monitoring mechanisms. The organization's cybersecurity infrastructure did not have the necessary tools to detect and respond to the intrusion promptly.This delay allowed the attackers to encrypt significant amounts of data before any countermeasures could be implemented. The incident underscored the need for robust monitoring systems and regular security assessments to identify and address potential vulnerabilities proactively.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Info 1</h5>
-                <p class="pl-4">- About 12 million beneficiaries' names, identification numbers, and contact information were among the private data compromised. Identity theft and other illicit operations can benefit greatly from such data. For those impacted, the disclosure of this information presented serious risks. Concerns over the security of private information in government agencies were also brought up.</p>
+                <p class="pl-4">- Sensitive taxpayer data, such as income information, tax return records, and personal identification numbers, were encrypted as a result of the ransomware attack. People were at serious danger of identity theft and financial fraud as a result of this data exposure. Concerns over the integrity and secrecy of the nation's tax system were also raised by the incident. Restoring the impacted data and guaranteeing the future security of its systems presented difficulties for KRA.</p>
 
                 <h5 class="text-xl font-medium"> Info 2</h5>
-                <p class="pl-4">- Transaction histories and bank account information were also compromised, along with personal data. The bank suffered financial losses as a result of the criminals' ability to carry out illegal operations. Customers' faith in Postbank's ability to protect their funds was further damaged by the disclosure of such financial information. Additionally, it emphasized how susceptible financial organizations could be to internal attacks.</p>
+                <p class="pl-4">- In addition to taxpayer data, the attack also affected KRA's internal operational data and communications. This disruption hindered the organization's ability to carry out its functions effectively, leading to delays in tax processing and revenue collection. The loss of access to internal systems also impacted staff productivity and coordination. The incident highlighted the critical importance of securing not only customer-facing systems but also internal operational infrastructure.</p>
 
-                <h5 class="text-xl font-medium">The impact of the hack on Postbank and its clients was significant. The bank lost more than R56 million as a result of fraudulent transactions. The requirement to replace 12 million bank cards presented logistical and operational difficulties. Customers lost faith in the bank as a result of the occurrence, which hurt its reputation. Consumers had to deal with the worry of possible identity theft as well as the inconvenience of having to replace their cards. The hack has led to calls for the bank to strengthen its security and regulatory inspections. Postbank responded by working to improve its internal security procedures and monitoring systems.
+                <h5 class="text-xl font-medium">The impact of the cyberattack on KRA and its stakeholders was extensive. The organization suffered financial losses, reputational harm, and operational interruptions as a result of the breach. Businesses, taxpayers, and government revenue collection were all impacted by the brief service disruption. Public confidence in KRA's capacity to protect private data and ensure service continuity was damaged by the incident. KRA responded by strengthening its cybersecurity framework through personnel training, technology upgrades, and the adoption of stronger security measures. The intrusion served as a wake-up call for other government agencies and companies to examine and upgrade their cybersecurity postures. In order to safeguard public services and vital infrastructure, it also underlined the necessity of a coordinated national cybersecurity strategy.
+
                 </p>
             </div>
         </div>
