--- a/companies-africa/Transnet.html
+++ b/companies-africa/Transnet.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>South African Post Office</title>
+		<title>Transnet</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
@@ -294,9 +294,9 @@
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Africa</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">South African Post Office</a>
+                        <a href="#" class="text-sm">Transnet</a>
                     </div>
-                    <h4 class="font-semibold text-5xl">South African Post Office</h4>
+                    <h4 class="font-semibold text-5xl">Transnet</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
                         <a href="#overview">Overview</a>
                         <a href="#method">How it Happened</a>
@@ -312,28 +312,28 @@
             
             <div class="space-y-4" id="overview">
                 <h4 class="text-3xl font-medium text-purple-300">Overview of the Breach</h4>
-                <p>The South African Post Office's banking branch, Postbank, experienced a serious internal security breach in December 2018. Unauthorized access to the bank's master key allowed rogue workers to carry out fraudulent transactions worth more than R56 million. The financial and personal information of almost 12 million beneficiaries was stolen in this breach. In order to stop additional abuse, Postbank was forced to replace all impacted bank cards. The event brought to light serious weaknesses in the internal security procedures of the bank. Concerns over insider risks in financial organizations were also brought up. The bank's operations and customer trust were negatively impacted for a long time by the incident.</p>
+                <p>The state-owned freight logistics firm Transnet in South Africa was the target of a ransomware assault on July 22, 2021. Major ports like Durban, Cape Town, and Port Elizabeth had operational disruptions as a result of the cyberattack. Transnet announced force majeure, stating that unanticipated events prevented it from fulfilling its contractual commitments. The nation's supply system was negatively affected by the attack, which caused delays in the handling and shipping of commodities. Critical maritime infrastructure in South Africa was said to have been disrupted in a way never seen before. The event brought to light how susceptible critical systems are to online attacks. It also underlined how important it is for the logistics industry to have strong cybersecurity safeguards.</p>
             </div>
 
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Detail 1</h1>
-                <p class="pl-4">- Employees with access to Postbank's master key, an essential component of the bank's security system, were responsible for the breach. These insiders carried out illegal transactions by abusing their positions. They were able to function without being discovered right away since there were lax access controls. This suggests that the bank's internal security procedures have serious flaws.
+                <p class="pl-4">- Critical data was encrypted and operations were disrupted when the attackers infiltrated Transnet's IT infrastructure with ransomware. Most likely, compromised remote access points or phishing emails allowed the malware to infiltrate the network. It spread laterally once inside, impacting several systems that are essential to port operations. This emphasizes how crucial it is to secure every point of entry and keep an eye on network activity.
                 </p>
                 <h1 class="text=xl font-medium">Detail 2</h1>
-                <p class="pl-4">- The fraudulent operations were not immediately detected by Postbank's monitoring systems. The delay in discovering the breach was caused in part by the lack of capabilities for anomaly detection and real-time monitoring. Furthermore, such internal dangers could not be adequately addressed by the bank's incident response procedures. This emphasizes the necessity of all-encompassing security plans that incorporate insider threat reduction.</p>
+                <p class="pl-4">- The ransomware assault was successful in part because Transnet relied on antiquated software and systems with known weaknesses. Modern security capabilities like behavioral threat identification and sophisticated encryption were absent from these outdated systems. The computers become a simple target for cybercriminals in the absence of frequent upgrades and fixes. The hack highlighted how urgently state-owned businesses must improve their IT systems.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Info 1</h5>
-                <p class="pl-4">- About 12 million beneficiaries' names, identification numbers, and contact information were among the private data compromised. Identity theft and other illicit operations can benefit greatly from such data. For those impacted, the disclosure of this information presented serious risks. Concerns over the security of private information in government agencies were also brought up.</p>
+                <p class="pl-4">- Systems for scheduling and logistics that oversee port and freight operations were hacked by the ransomware attack. This interruption slowed the flow of products into and out of South Africa, stopped cargo processing, and delayed shipments. Port employees were unable to oversee ship docking and container monitoring due to a lack of access to schedule information. The nation's economy was affected by these disruptions, particularly during the COVID-19 recovery efforts.</p>
 
                 <h5 class="text-xl font-medium"> Info 2</h5>
-                <p class="pl-4">- Transaction histories and bank account information were also compromised, along with personal data. The bank suffered financial losses as a result of the criminals' ability to carry out illegal operations. Customers' faith in Postbank's ability to protect their funds was further damaged by the disclosure of such financial information. Additionally, it emphasized how susceptible financial organizations could be to internal attacks.</p>
+                <p class="pl-4">- Employee information, including names, ID numbers, and contact details, may have been compromised in addition to operational systems. This sparked worries about possible identity theft and improper use of private data. Internal staff systems were among those affected, however Transnet would not officially disclose the scope of the data leak. This demonstrated how crucial it is for breach response procedures to safeguard internal staff and customer data.</p>
 
-                <h5 class="text-xl font-medium">The impact of the hack on Postbank and its clients was significant. The bank lost more than R56 million as a result of fraudulent transactions. The requirement to replace 12 million bank cards presented logistical and operational difficulties. Customers lost faith in the bank as a result of the occurrence, which hurt its reputation. Consumers had to deal with the worry of possible identity theft as well as the inconvenience of having to replace their cards. The hack has led to calls for the bank to strengthen its security and regulatory inspections. Postbank responded by working to improve its internal security procedures and monitoring systems.
+                <h5 class="text-xl font-medium">Transnet and the South African economy suffered greatly as a result of the ransomware attack. Delivery of products, especially necessary imports, was severely delayed due to cargo backlogs at major ports. Due to the inability to function normally, Transnet declared force majeure and suspended a number of contracts. The incident hurt the company's operating confidence, affected trade partners, and resulted in millions of dollars in losses. Delivery delays and shortages resulted from the impact on consumers, shipping firms, and shops. The incident brought critical infrastructure's cyber vulnerability to the attention of the country. Transnet started working to strengthen its cybersecurity posture after the incident, which included segmenting its networks and updating software. The hack turned into an example of how critical services require cyber resilience to avoid economic disruption.
                 </p>
             </div>
         </div>
