--- a/famous-cyber-attacked-companies.html
+++ b/famous-cyber-attacked-companies.html
@@ -303,7 +303,7 @@
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                    <p class="text-white text-lg font-semibold">Company</p>
+                    <p class="text-white text-lg font-semibold">Africa</p>
                 </div>
             </a>
 
@@ -311,7 +311,7 @@
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                    <p class="text-white text-lg font-semibold">Company</p>
+                    <p class="text-white text-lg font-semibold">Asia</p>
                 </div>
             </a>
 
@@ -319,7 +319,7 @@
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                    <p class="text-white text-lg font-semibold">Company</p>
+                    <p class="text-white text-lg font-semibold">Australia/Oceania</p>
                 </div>
             </a>
 
@@ -327,7 +327,7 @@
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                    <p class="text-white text-lg font-semibold">Company</p>
+                    <p class="text-white text-lg font-semibold">Europe</p>
                 </div>
             </a>
 
@@ -335,7 +335,7 @@
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                    <p class="text-white text-lg font-semibold">Company</p>
+                    <p class="text-white text-lg font-semibold">North America</p>
                 </div>
             </a>
 
@@ -343,7 +343,7 @@
                 <img src="https://placehold.co/500x500" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                    <p class="text-white text-lg font-semibold">Company</p>
+                    <p class="text-white text-lg font-semibold">South America</p>
                 </div>
             </a>
         </div>
