content: added content, pictures, and hover effects

--- a/companies-affected.html
+++ b/companies-affected.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>ThreatScope</title>
+		<title>Companies Affected</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="assets/css/fonts.css">
 	</head>
@@ -288,8 +288,8 @@
 			<div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto mt-10">
 				<div class="md:col-span-2 col-span-1 flex items-center justify-center">
                     <div class="block px-4">
-                        <h4 class="text-5xl font-medium">Companies Affected</h4>
-                        <p class="mt-4 text-gray-200 md:text-left text-justify">Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.</p>
+                        <h4 class="text-5xl text-[#E2C8F1] font-medium">Companies Affected</h4>
+                        <p class="mt-4 text-gray-200 md:text-left text-justify">Welcome to this section, where we explore the real-world impact of cybersecurity breaches. Discover how leading companies were compromised, the financial toll they endured, and the steps they took to recover. This page sheds light on the legal, ethical, and strategic responses organizations faced in the aftermath of cyberattacks.</p>
                     </div>
 				</div>
 				<div class="flex justify-center mt-8 px-4 md:mt-0">
@@ -298,52 +298,52 @@
 			</div>
 		</div>
 
-		
-		<div class="md:px-2 px-4 max-w-6xl mx-auto grid grid-cols-4 gap-4">
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-44 object-cover rounded-t">
-				<div class="p-4 space-y-2">
-					<h5 class="text-lg font-medium">Famous Cyber Attacked Companies</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
-					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-					</div>
-				</div>
-			</div>
+        <div class="md:px-2 px-4 max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/companies-affected-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+                <div class="p-4 space-y-2 flex-grow flex flex-col">
+                    <h5 class="text-lg font-medium">Famous Cyber Attacked Companies</h5>
+                    <p class="text-sm text-gray-300 flex-grow">Dive into real-world examples of high-profile companies that fell victim to cyberattacks. Discover what went wrong and how these incidents shaped the cybersecurity landscape.</p>
+                    <div class="mt-2">
+                        <a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-auto inline-block">Learn More</a>
+                    </div>
+                </div>
+            </div>
 
-			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-44 object-cover rounded-t">
-				<div class="p-4 space-y-2">
-					<h5 class="text-lg font-medium">Financial Impact of Breachers</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
-					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-					</div>
-				</div>
-			</div>
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/financial-impact-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+                <div class="p-4 space-y-2 flex-grow flex flex-col">
+                    <h5 class="text-lg font-medium">Financial Impact of Breachers</h5>
+                    <p class="text-sm text-gray-300 flex-grow">Uncover the hidden costs behind cyber breaches—from revenue loss to reputational damage. This section reveals how attacks hit companies where it hurts most: their bottom line.</p>
+                    <div class="mt-2">
+                        <a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-auto inline-block">Learn More</a>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/recovery-mitigation-measures-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+                <div class="p-4 space-y-2 flex-grow flex flex-col">
+                    <h5 class="text-lg font-medium">Recovery and Mitigation Measures</h5>
+                    <p class="text-sm text-gray-300 flex-grow">Learn how companies bounce back after an attack through strategic recovery plans and enhanced security protocols. Explore best practices that turn crises into opportunities.</p>
+                    <div class="mt-2">
+                        <a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-auto inline-block">Learn More</a>
+                    </div>
+                </div>
+            </div>
 
-			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-44 object-cover rounded-t">
-				<div class="p-4 space-y-2">
-					<h5 class="text-lg font-medium">Recovery and Mitigation Measures</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
-					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-					</div>
-				</div>
-			</div>
-			
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-44 object-cover rounded-t">
-				<div class="p-4 space-y-2">
-					<h5 class="text-lg font-medium">Legal and Ethical Consequences</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
-					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-					</div>
-				</div>
-			</div>
-		</div>
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/legal-ethical-consequences-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+                <div class="p-4 space-y-2 flex-grow flex flex-col">
+                    <h5 class="text-lg font-medium">Legal and Ethical Consequences</h5>
+                    <p class="text-sm text-gray-300 flex-grow">Understand the legal battles and ethical dilemmas companies face post-breach. This section highlights the importance of compliance and responsible data handling.</p>
+                    <div class="mt-2">
+                        <a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-auto inline-block">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 		
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
